# PowderPipeline

./: .gitignore  README.md  pyproject.toml
notebooks/: Analysis Prototype.ipynb  MarkdownAnalysis.ipynb  Prompt Engineering.ipynb  Ski Pass Analysis.ipynb  ski_pass_eda.ipynb  snow_eda.ipynb
src/powderpipeline/: config.py
src/powderpipeline/analyzers/: base.py  ski_resorts.py  snow.py
src/powderpipeline/cli/: __init__.py  analyze.py  backfill.py  scrape.py  visualize.py
src/powderpipeline/db/: __init__.py  avalanche.py  ski_pass.py  ski_resorts.py  snowpack.py
src/powderpipeline/lake/: base_writer.py
src/powderpipeline/scrapers/: avalanche.py  base.py  onthesnow.py  ski_pass.py  ski_resorts.py  snow_conditions.py  snowpack.py
src/powderpipeline/visualization/: __init__.py  avalanche.py  ski_resorts.py
src/powderpipeline/warehouse/: __init__.py  old.py  ski_resorts.py  snow.py
tests/: test_package.py  test_ski_resort_scraper.py
