[project]
name = "powderpipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocsv>=1.4.0",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "bokeh>=3.8.2",
    "dash>=4.0.0",
    "dask[distributed]>=2026.1.2",
    "duckdb>=1.4.4",
    "duckdb-engine>=0.17.0",
    "geopy>=2.4.1",
    "jupyterlab>=4.5.5",
    "nbconvert[webpdf]>=7.17.0",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "pandoc>=2.4",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.13.1",
    "pydantic-settings-yaml>=0.2.0",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.37",
    "typer>=0.24.1",
    "vl-convert-python>=1.9.0.post1",
    "waybackpy>=3.0.6",
]

[project.scripts]
powderpipeline = "powderpipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"