[project]
name = "powderpipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright-stealth>=2.0.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.37",
    "typer>=0.24.1",
    "wayback>=0.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
powderpipeline = "powderpipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
